--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "@expo-google-fonts/alegreya-sc": "^0.2.3",
     "@expo-google-fonts/poppins": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-native-fontawesome": "^0.3.2",
     "@react-navigation/native": "^6.0.2",
-    "expo": "~51.0.12",
+    "expo": "^51.0.13",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
@@ -36,7 +38,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-svg": "^15.3.0",
+    "react-native-svg": "^15.2.0",
     "react-native-svg-transformer": "^1.4.0",
     "react-native-web": "~0.19.10"
   },
